# lagrangian

./: lagrangian.cabal  stack.yaml
src/Numeric/AD/Lagrangian/: Internal.hs
tests/: Main.hs
